allright, altough it damaged the animations a bit, the problem seems fixed, checking on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -546,13 +546,13 @@ hr{
 }
 @media (max-width: 480px){
     *{
-        overflow-x: hidden;
+        box-sizing: border-box;
     }
     html{
         max-width: 100vw;
     }
     body{
-        max-width:100dvw;
+        max-width:100%;
         width: auto;
         overflow-x:hidden;
         white-space:nowrap;
